--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -33,6 +33,10 @@ name = "bpf_probe_read"
 path = "src/bpf_probe_read.rs"
 
 [[bin]]
+name = "hash_map"
+path = "src/hash_map.rs"
+
+[[bin]]
 name = "linear_data_structures"
 path = "src/linear_data_structures.rs"
 
