--- a/test/integration-common/Cargo.toml
+++ b/test/integration-common/Cargo.toml
@@ -15,6 +15,7 @@ workspace = true
 
 [dependencies]
 aya = { path = "../../aya", optional = true }
+aya-common = { path = "../../aya-common" }
 
 [features]
 user = ["aya"]
