--- a/ebpf/aya-ebpf/Cargo.toml
+++ b/ebpf/aya-ebpf/Cargo.toml
@@ -14,6 +14,7 @@ rust-version.workspace = true
 workspace = true
 
 [dependencies]
+aya-common = { version = "^0.1.0", path = "../../aya-common" }
 aya-ebpf-bindings = { version = "^0.1.2", path = "../aya-ebpf-bindings" }
 aya-ebpf-cty = { version = "^0.2.3", path = "../aya-ebpf-cty" }
 aya-ebpf-macros = { version = "^0.1.2", path = "../../aya-ebpf-macros" }
