--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,15 @@ env:
 
 jobs:
   ciUbuntuLatest:
-    uses: melodium-tech/github-actions/.github/workflows/melodium-ubuntu.yml@v0.9.0
-    with:
-      version: 0.9.0
-      command: |
-        run .melodium-ci/Compo.toml buildTestAya --logs_directory '"logs/"' --github_contexts '$''{{{{ { "github": ${{ toJSON(github) }}, "vars": ${{ toJSON(vars) }}, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
-      artifact-path: logs/
-    secrets:
-      token: "${{ secrets.GITHUB_TOKEN }}"
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          .melodium-ci/melodium run .melodium-ci/Compo.toml buildTestAya --logs_directory '"logs/"' --github_contexts '$''{{{{ { "github": ${{ toJSON(github) }}, "vars": ${{ toJSON(vars) }}, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
+      # uses: melodium-tech/github-actions/.github/workflows/melodium-ubuntu.yml@v0.9.0
+    # with:
+    #   version: 0.9.0
+    #   command: |
+    #     run .melodium-ci/Compo.toml buildTestAya --logs_directory '"logs/"' --github_contexts '$''{{{{ { "github": ${{ toJSON(github) }}, "vars": ${{ toJSON(vars) }}, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
+    #   artifact-path: logs/
+    # secrets:
+    #   token: "${{ secrets.GITHUB_TOKEN }}"
