aya,ebpf: add BPF_MAP_TYPE_SK_STORAGE
This map type requires BTF, and we can finally do it!

--- a/test/integration-ebpf/Cargo.toml
+++ b/test/integration-ebpf/Cargo.toml
@@ -73,6 +73,10 @@ name = "ring_buf"
 path = "src/ring_buf.rs"
 
 [[bin]]
+name = "sk_storage"
+path = "src/sk_storage.rs"
+
+[[bin]]
 name = "simple_prog"
 path = "src/simple_prog.rs"
 
