--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,17 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  ciUbuntuLatest:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-      - run: |
-          .melodium-ci/melodium run .melodium-ci/Compo.toml buildTestAya --logs_directory '"logs/"' --github_contexts '$''{{{{ { "github": ${{ toJSON(github) }}, "vars": ${{ toJSON(vars) }}, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
+  buildTestAya:
+    uses: melodium-tech/github-actions/.github/workflows/melodium-local-distrib.yml@v0.9
+    with:
+      command: run .melodium-ci/Compo.toml buildTestAya
+      artifact-path: 'logs/'
+
+    #runs-on: ubuntu-latest
+    #steps:
+    #  - uses: actions/checkout@v5
+    #  - run: |
+    #      .melodium-ci/melodium run .melodium-ci/Compo.toml buildTestAya --logs_directory '"logs/"' --github_contexts '$''{{{{ { "github": ${{ toJSON(github) }}, "vars": ${{ toJSON(vars) }}, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
       # uses: melodium-tech/github-actions/.github/workflows/melodium-ubuntu.yml@v0.9.0
     # with:
     #   version: 0.9.0
