--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,8 @@ jobs:
     with:
       command: run .melodium-ci/Compo.toml buildTestAya
       artifact-path: 'logs/'
-
+    secrets:
+        token: ${{ secrets.token }}
     #runs-on: ubuntu-latest
     #steps:
     #  - uses: actions/checkout@v5
