--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       command: run .melodium-ci/Compo.toml buildTestAya
       artifact-path: 'logs/'
     secrets:
-        token: ${{ secrets.token }}
+        token: ${{ secrets.GITHUB_TOKEN }}
     #runs-on: ubuntu-latest
     #steps:
     #  - uses: actions/checkout@v5
