xtask: teach integration-test vm to consume kernel debs directly
Bundle handling of Debian kernel archives into xtask so callers can pipe the
raw `.deb` paths straight into `cargo xtask integration-test vm …`. The driver
now extracts each archive into `<cache>/kernel-archives`, locates the matching
`vmlinuz-*`, `lib/modules/*`, and config files, and feeds those into the
initramfs build without requiring the user to pre-run dpkg/tar. With this in
place we drop `.github/scripts/find_kernels.py`, simplify AGENTS.md/CI
instructions to use `find test/.tmp -name '*.deb'`, remove the gnu-tar and
`xz2` requirements we no longer need, and add `tar` as a workspace dependency
for the extractor.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,7 @@ rustversion = { version = "1.0.0", default-features = false }
 scopeguard = { version = "1.2.0", default-features = false }
 syn = { version = "2", default-features = false }
 tempfile = { version = "3", default-features = false }
+tar = { version = "0.4.44", default-features = false }
 test-case = { version = "3.1.0", default-features = false }
 test-log = { version = "0.2.13", default-features = false }
 testing_logger = { version = "0.1.1", default-features = false }
