--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -256,7 +256,6 @@ jobs:
           # Dependencies are tracked in `Brewfile`.
           brew bundle
           echo $(brew --prefix curl)/bin >> $GITHUB_PATH
-          echo $(brew --prefix gnu-tar)/libexec/gnubin >> $GITHUB_PATH
           echo $(brew --prefix llvm)/bin >> $GITHUB_PATH
 
           # https://github.com/actions/setup-python/issues/577
@@ -319,17 +318,6 @@ jobs:
           set -euxo pipefail
           rm -rf test/.tmp/boot test/.tmp/lib
 
-      - name: Extract debian kernels
-        run: |
-          set -euxo pipefail
-          # The wildcard '**/boot/*' extracts kernel images and config.
-          # The wildcard '**/modules/*' extracts kernel modules.
-          # Modules are required since not all parts of the kernel we want to
-          # test are built-in.
-          find test/.tmp -name '*.deb' -print0 | xargs -t -0 -I {} \
-            sh -c "dpkg --fsys-tarfile {} | tar -C test/.tmp \
-              --wildcards --extract '**/boot/*' '**/modules/*' --file -"
-
       - name: Run local integration tests
         if: runner.os == 'Linux'
         run: cargo xtask integration-test local
@@ -338,9 +326,9 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           set -euxo pipefail
-          .github/scripts/find_kernels.py | xargs -t -0 \
-          cargo xtask integration-test vm --cache-dir test/.tmp \
-            --github-api-token ${{ secrets.GITHUB_TOKEN }} \
+          find test/.tmp -name '*.deb' -print0 | xargs -t -0 \
+            cargo xtask integration-test vm --cache-dir test/.tmp \
+              --github-api-token ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run virtualized integration tests
         if: runner.os == 'macOS'
@@ -349,9 +337,9 @@ jobs:
           CARGO_TARGET_X86_64_UNKNOWN_LINUX_MUSL_LINKER: x86_64-linux-musl-gcc
         run: |
           set -euxo pipefail
-          .github/scripts/find_kernels.py | xargs -t -0 \
-          cargo xtask integration-test vm --cache-dir test/.tmp \
-            --github-api-token ${{ secrets.GITHUB_TOKEN }} \
+          find test/.tmp -name '*.deb' -print0 | xargs -t -0 \
+            cargo xtask integration-test vm --cache-dir test/.tmp \
+              --github-api-token ${{ secrets.GITHUB_TOKEN }}
 
   # Provides a single status check for the entire build workflow.
   # This is used for merge automation, like Mergify, since GH actions
