--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       command: |
         run .melodium-ci/Compo.toml buildTestAya --github_contexts='$''{{{{ { "github": ${{ toJSON(github) }}, "vars": ${{ toJSON(vars) }}, "secrets": { "GITHUB_TOKEN": "'"$GITHUB_TOKEN"'" } } }}}}'
       artifact-path: 'logs/'
+      melodium_images_pull_source: registry.gitlab.com/melodium/containers
     secrets:
         token: ${{ secrets.GITHUB_TOKEN }}
     #runs-on: ubuntu-latest
