--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -10,6 +10,9 @@ linker = "arm-linux-gnueabihf-gcc"
 [target.aarch64-unknown-linux-musl]
 linker = "aarch64-linux-musl-gcc"
 
+[target.x86_64-unknown-linux-musl]
+linker = "x86_64-linux-musl-gcc"
+
 [target.powerpc64le-unknown-linux-gnu]
 linker = "powerpc64le-linux-gnu-gcc"
 
