--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -215,9 +215,9 @@ jobs:
 
           # We don't use ubuntu-latest because we care about the apt packages available.
           - target: x86_64-unknown-linux-gnu
-            os: ubuntu-22.04
+            os: ubuntu-24.04
           - target: aarch64-unknown-linux-gnu
-            os: ubuntu-22.04-arm
+            os: ubuntu-24.04-arm
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v5
@@ -226,17 +226,14 @@ jobs:
 
       - name: Install prerequisites
         if: runner.os == 'Linux'
-        # ubuntu-22.04 comes with clang 13-15[0]; support for signed and 64bit
-        # enum values was added in clang 15[1] which isn't in `$PATH`.
-        #
-        # [0] https://github.com/actions/runner-images/blob/main/images/ubuntu/Ubuntu2204-Readme.md
-        #
-        # [1] https://github.com/llvm/llvm-project/commit/dc1c43d
         run: |
           set -euxo pipefail
           sudo apt update
-          sudo apt -y install lynx qemu-system-{arm,x86} musl-tools
-          echo /usr/lib/llvm-15/bin >> $GITHUB_PATH
+          sudo apt -y install \
+            liblzma-dev \
+            lynx \
+            musl-tools \
+            qemu-system-{arm,x86}
 
       - name: Install prerequisites
         if: runner.os == 'macOS'
