--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,7 @@ jobs:
         arch:
           - aarch64-unknown-linux-gnu
           - armv7-unknown-linux-gnueabi
+          - loongarch64-unknown-linux-gnu
           - powerpc64le-unknown-linux-gnu
           - riscv64gc-unknown-linux-gnu
           - s390x-unknown-linux-gnu
@@ -149,6 +150,7 @@ jobs:
         bpf_target_arch:
           - aarch64
           - arm
+          - loongarch64
           - mips
           - powerpc64
           - riscv64
