lints: enable unsafe_op_in_unsafe_fn

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -150,7 +150,7 @@ noop_method_call = "warn"
 single_use_lifetimes = "warn"
 trivial_numeric_casts = "warn"
 unreachable_pub = "warn"
-#unsafe_op_in_unsafe_fn = "warn"
+unsafe_op_in_unsafe_fn = "warn"
 unstable_features = "warn"
 unused_crate_dependencies = "warn"
 unused_extern_crates = "warn"
