ebpf: extract CARGO_CFG_BPF_TARGET_ARCH logic

--- a/ebpf/aya-ebpf-bindings/Cargo.toml
+++ b/ebpf/aya-ebpf-bindings/Cargo.toml
@@ -14,3 +14,6 @@ workspace = true
 
 [dependencies]
 aya-ebpf-cty = { version = "^0.2.2", path = "../aya-ebpf-cty" }
+
+[build-dependencies]
+aya-build = { version = "^0.1.2", path = "../../aya-build" }
