--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -45,6 +45,7 @@ xdpilone = { workspace = true }
 [build-dependencies]
 anyhow = { workspace = true }
 aya-build = { path = "../../aya-build" }
+cargo_metadata = { workspace = true }
 # TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
 # it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
 # script to build this, but we want to teach cargo about the dependecy so that cache invalidation
