--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,9 +178,8 @@ jobs:
             for target in bpfeb-unknown-none bpfel-unknown-none; do
               echo "::group::Build and test for $arch / $target"
               if ! (
-                export CARGO_CFG_BPF_TARGET_ARCH="$arch"
 
-                cargo +nightly hack build \
+                RUSTFLAGS="--cfg bpf_target_arch=\"$arch\"" cargo +nightly hack build \
                   --target "$target" \
                   -Z build-std=core \
                   --package aya-ebpf \
