aya-obj: Sanitize type names
Rust emits characters like `<` and `>` in name types with generics, that
are not accepted by the Linux kernel.

In theory, the correct place to fix that would be the Linux kernel, but
given that we have to support old kernels and that such change would be
controversial, it's better to fix it up on our side, at least for now.

We used to rely on bpf-linker to fix that up, but given that we want to
support binutils at some point, we need to do it in Aya during the load.

--- a/aya-obj/Cargo.toml
+++ b/aya-obj/Cargo.toml
@@ -18,6 +18,10 @@ workspace = true
 
 [dependencies]
 bytes = { workspace = true }
+# hashbrown uses foldhash for its `DefaultHasher` implementation. However,
+# hashbrown doesn't expose any API allowing to create hashers with fixed seed,
+# so we need to use `foldhash::FixedState` directly.
+foldhash = { workspace = true }
 hashbrown = { workspace = true, features = ["default-hasher", "equivalent"] }
 log = { workspace = true }
 object = { workspace = true, features = ["elf", "read_core"] }
