--- a/.melodium-ci/Compo.toml
+++ b/.melodium-ci/Compo.toml
@@ -17,4 +17,5 @@ work = "^0.9.0"
 [entrypoints]
 buildTestAya = "ci::buildTestAya"
 buildTestAyaDirect = "ci/on_image::buildTestAya"
+buildTestAyaEbpf = "ci::buildTestAyaEbpfEntrypoint"
 
